--- a/JavaScript/manupulando-dados/array-manipulation.html
+++ b/JavaScript/manupulando-dados/array-manipulation.html
@@ -24,7 +24,7 @@
 
     //remover elementos da array
     linguagens = ["html", "css", "js"]
-    linguagens.splice(1, 2) //remove o elemento na posição 1 e 2 elementos no total, a partir do primeiro
+    linguagens.splice(1, 2) //remove 2 elementos a partir da posião 1
     console.log(linguagens)
     //so fica o html
 
