--- a/JavaScript/manupulando-dados/prototype.html
+++ b/JavaScript/manupulando-dados/prototype.html
@@ -3,5 +3,10 @@
     let n=5
     console.log(n.valueOf)      //prototype
 
+    let phrase = "Eu quero viver o amor!"
+    let myArray = phrase.split(" ")
+    let phraseWithUnderscore = myArray.join("_")
+    console.log(phraseWithUnderscore)
+
 </script>
 
